# AuthSwitch

./: .gitignore  .python-version  postgres-docker-compose.yml  requirements.txt
api/: .taiapiproject  README.md  dockerfile  entrypoint.sh  pyproject.toml
api/api/: __dev__.py  __main__.py  config.py
api/api/routers/: __init__.py
api/api/routers/auth/: __init__.py  dependencies.py  docs_router.py  jwt.py  login_router.py  rbac_backend.py  rbac_models.py  rbac_router.py  utils.py
api/api/routers/auth/database/: __init__.py  _base.py  _session.py
api/api/routers/auth/database/_shared/: __init__.py
api/api/routers/auth/database/permission/: __init__.py  dao.py  dtos.py  model.py
api/api/routers/auth/database/realm/: __init__.py  dao.py  dtos.py  model.py
api/api/routers/auth/database/role/: __init__.py  dao.py  dtos.py  model.py
api/api/routers/database/public/: __init__.py  _base.py  _session.py
api/rbac/: main.py
api/rbac/tables/main/: __init__.py
database/: README.md  pyproject.toml
database/database/public/: __init__.py
database/database/public/_shared/: __init__.py  aggregation.py
database/database/public/_shared/utils/: funcs.py
database/database/public/comment/: __init__.py  dao_async.py  dao_sync.py  dtos.py  model.py
database/database/public/post/: __init__.py  dao_async.py  dao_sync.py  dtos.py  model.py
database/database/public/user_stats/: __init__.py  dao_async.py  dao_sync.py  dtos.py  model.py
database/database/public/usuario/: __init__.py  dao_async.py  dao_sync.py  dtos.py  model.py
database/schemas/: auth.py  public.py
(+134 files in other folders)
