[project]
name = "api"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "python-jose>=3.5.0,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "tai-alphi>=2.0.0,<3.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
