[project]
name = "database"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "sqlalchemy (>=2.0.42,<3.0)",
    "pydantic (>=2.11.7,<3.0)",
    "tai-alphi (>=2.0.1,<3.0)",
    "rich (>=14.0.0,<15.0)"
]

[project.optional-dependencies]
# Drivers síncronos (elige según tu base de datos)
postgresql = ["psycopg2-binary (>=2.9.10,<3.0)"]
mysql = ["pymysql (>=1.1.1,<2.0)"]
sqlserver = ["pyodbc (>=5.2.0,<6.0)"]

# Drivers asíncronos
postgresql-async = ["asyncpg (>=0.30.0,<1.0)"]
mysql-async = ["aiomysql (>=0.2.0,<1.0)"]
sqlserver-async = ["aioodbc (>=0.5.0,<1.0)"]

# Funcionalidades opcionales
encryption = ["cryptography (>=45.0.4,<46.0)"]
vectors = ["pgvector (>=0.4.0,<1.0)"]
vectors-encoding = ["pgvector (>=0.4.0,<1.0)", "sentence-transformers (>=3.0.0,<4.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
